// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with title 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-3 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0.75rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-2 {
  border-radius: 2px;
  max-width: 300px;
  background: #FFFFFF;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
  padding: 1rem;
}

.emotion-1 {
  text-align: center;
  margin-bottom: 0.5rem;
}

<div>
  <div
    class="emotion-0"
    data-show="false"
  >
    <span>
      Testing with title
    </span>
  </div>
  <div
    class="emotion-3"
    data-visible="false"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  >
    <div
      class="emotion-2"
    >
      <h4
        class="emotion-1"
      >
        Title
      </h4>
      <p>
        Popover text
      </p>
    </div>
  </div>
</div>
`;

exports[`should render correctly without title 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-2 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0.75rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-1 {
  border-radius: 2px;
  max-width: 300px;
  background: #FFFFFF;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
  padding: 1rem;
}

<div>
  <div
    class="emotion-0"
    data-show="false"
  >
    <span>
      Testing no title
    </span>
  </div>
  <div
    class="emotion-2"
    data-visible="false"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  >
    <div
      class="emotion-1"
    >
      <p>
        Popover text
      </p>
    </div>
  </div>
</div>
`;
